.get(0) -> .getFirst()